@@ -220,6 +220,8 @@ public class TupleEntry
 
   /**
    * Constructor TupleEntry creates a new TupleEntry instance that is a safe copy of the given tupleEntry.
+   * <p/>
+   * The new instance is safe to cache and will be modifiable regardless of the given tupleEntry state.
    *
    * @param tupleEntry of type TupleEntry
    */
@@ -709,51 +711,94 @@ public class TupleEntry
     }
 
   /**
-   * Method selectEntry selects the fields specified in selector from this instance.
+   * Method selectEntry selects the fields specified in the selector from this instance. If {@link Fields#ALL} or the
+   * same fields as declared are given, {@code this} will be returned.
+   * <p/>
+   * The returned TupleEntry will be either modifiable or unmodifiable, depending on the state of this TupleEntry instance.
+   * <p/>
+   * See {@link #selectEntryCopy(Fields)} to guarantee a copy suitable for modifying or caching/storing in a collection.
+   * <p/>
+   * Note this is a bug fix and change from 2.0 and 2.1. In previous versions the modifiable state was dependent
+   * on the given selector.
    *
    * @param selector Fields selector that selects the values to return
    * @return TupleEntry
    */
   public TupleEntry selectEntry( Fields selector )
     {
-    if( selector == null || selector.isAll() || fields == selector )
+    if( selector == null || selector.isAll() || fields == selector ) // == is intentional
       return this;
 
     if( selector.isNone() )
-      return TupleEntry.NULL;
+      return isUnmodifiable ? TupleEntry.NULL : new TupleEntry();
+
+    return new TupleEntry( Fields.asDeclaration( selector ), tuple.get( this.fields, selector ), isUnmodifiable );
+    }
+
+  /**
+   * Method selectEntry selects the fields specified in selector from this instance.
+   * <p/>
+   * It is guaranteed to return a new modifiable TupleEntry instance at a cost of copying data.
+   * <p/>
+   * The returned instance is safe to cache.
+   *
+   * @param selector Fields selector that selects the values to return
+   * @return TupleEntry
+   */
+  public TupleEntry selectEntryCopy( Fields selector )
+    {
+    if( selector == null || selector.isAll() || fields == selector ) // == is intentional
+      return new TupleEntry( this );
+
+    if( selector.isNone() )
+      return new TupleEntry();
 
     return new TupleEntry( Fields.asDeclaration( selector ), tuple.get( this.fields, selector ) );
     }
 
   /**
-   * Method selectTuple selects the fields specified in selector from this instance.
+   * Method selectTuple selects the fields specified in the selector from this instance. If {@link Fields#ALL} or the
+   * same fields as declared are given, {@code this.getTuple()} will be returned.
    * <p/>
-   * This method may return the underlying Tuple instance without copying it. See {@link #selectTupleCopy(Fields)}
-   * to guarantee a copy suitable for modifying or caching/storing in a local collection.
+   * The returned Tuple will be either modifiable or unmodifiable, depending on the state of this TupleEntry instance.
+   * <p/>
+   * See {@link #selectTupleCopy(Fields)} to guarantee a copy suitable for modifying or caching/storing in a collection.
+   * <p/>
+   * Note this is a bug fix and change from 2.0 and 2.1. In previous versions the modifiable state was dependent
+   * on the given selector.
    *
    * @param selector Fields selector that selects the values to return
    * @return Tuple
    */
   public Tuple selectTuple( Fields selector )
     {
-    if( selector == null || selector.isAll() || fields == selector )
+    if( selector == null || selector.isAll() || fields == selector ) // == is intentional
       return this.tuple;
 
     if( selector.isNone() )
       return Tuple.NULL;
 
-    return tuple.get( fields, selector );
+    Tuple result = tuple.get( fields, selector );
+
+    if( isUnmodifiable )
+      Tuples.asUnmodifiable( result );
+
+    return result;
     }
 
   /**
-   * Method selectTuple selects the fields specified in selector from this instance.
+   * Method selectTupleCopy selects the fields specified in selector from this instance.
+   * <p/>
+   * It is guaranteed to return a new modifiable Tuple instance at a cost of copying data.
+   * <p/>
+   * The returned instance is safe to cache.
    *
    * @param selector Fields selector that selects the values to return
    * @return Tuple
    */
   public Tuple selectTupleCopy( Fields selector )
     {
-    if( selector == null || selector.isAll() || fields == selector )
+    if( selector == null || selector.isAll() || fields == selector ) // == is intentional
       return new Tuple( this.tuple );
 
     if( selector.isNone() )
